# TermPlay

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  dist-workspace.toml
.github/: release-template.md
.github/workflows/: build.yml  ci-cd.yml
scripts/: install.sh  release.sh
src/: app.rs  audio.rs  cli.rs  config.rs  highscores.rs  main.rs  menu.rs
src/core/: mod.rs
src/games/: _2048.rs  breakout.rs  game2048.rs  gameoflife.rs  minesweeper.rs  mod.rs  pong.rs  snake.rs  tetris.rs
src/music/: _2048.rs  breakout.rs  gameoflife.rs  minesweeper.rs  mod.rs  pong.rs  snake.rs  tetris.rs
src/ui/: mod.rs
wix/: main.wxs
