[package]
name = "termplay"
version = "0.1.0"
edition = "2021"
authors = ["mederick <mederick@example.com>"]
description = "A collection of stylish terminal mini-games"
license = "MIT"

[[bin]]
name = "termplay"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.29"
clap = { version = "4.4", features = ["derive"] }
rand = "0.9"