[package]
name = "termplay"
version = "1.2.0"
edition = "2021"
authors = ["mederick <mederick@example.com>"]
description = "A collection of stylish terminal mini-games"
license = "MIT"

[[bin]]
name = "termplay"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.29"
clap = { version = "4.4", features = ["derive"] }
rand = "0.9"
rodio = { version = "0.21", features = ["noise"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"